--- a/PR/css/common.css
+++ b/PR/css/common.css
@@ -53,10 +53,38 @@
 
 }
 
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+.experiences-flex-column a {
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--basic-red);
+    color: var(--basic-red);
+    padding: 5px;
+
+}
+
+.red-dashed {
+    text-decoration: underline;
+    color: var(--basic-red);
+}
 
 
-
-
+.more-button {
+    color: var(--basic-red);
+    background-color: white;
+    border-color: var(--basic-red);
+    padding: 10px 0;
+    margin: 10px;
+    border-style: solid;
+    min-width: 175px;
+}
 
 
 html{
