--- a/PR/css/header.css
+++ b/PR/css/header.css
@@ -4,12 +4,11 @@
 
 
 .header-top {
-    width: calc(50% - 2px);
-    height: 100%;
+    /* height: 100%; */
     margin: 0;
     padding: 0;
     border: none;
-    display: inline-block;
+     flex: 1; /* each header-top occupies one space in the div */
 }
 
 
@@ -71,15 +70,14 @@ header ul {
     border-radius: 10px;
     background-color: #333;
 
-    
-
-
+  
     /* dimensions */
     width: 30%;
 }
 
 .anika-container .anika-text {
     padding: 15px 0;
+    text-align: center;
 }
 .anika-container div {
     padding: 5px 0;
