--- a/PR/css/blog.css
+++ b/PR/css/blog.css
@@ -12,6 +12,11 @@
 
 }
 
+hr {
+    height:1px;
+    background: red;
+}
+
 .float-blog .float-left {
     border-radius: 5px;
     margin-right: 15px;
