--- a/PR/css/common.css
+++ b/PR/css/common.css
@@ -61,6 +61,17 @@
     float: right;
 }
 
+
+.reverse {
+    transform: scale(-1, 1);
+    color: #000080;
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+}
+
 .experiences-flex-column a {
     border-style: solid;
     border-width: 1px;
