table made and fixed some containers

--- a/PR/css/footer.css
+++ b/PR/css/footer.css
@@ -2,6 +2,8 @@ footer {
     grid-template-areas: "social newsletter images"
     "footer-info footer-info footer-info footer-info";
     background-color: blue;
+    width: 1170px;
+    margin:0 auto;
     margin-top: 50px;
 }
 
