--- a/PR/css/footer.css
+++ b/PR/css/footer.css
@@ -3,6 +3,7 @@ footer {
     "footer-info footer-info footer-info footer-info";
     background-color: blue;
     margin-top: 50px;
+    padding: 15px 0 50px 0;
 }
 
 
@@ -10,31 +11,53 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin:0 auto;
+    margin: 0 auto;
+    width: 1170px;
+}
+
+.footer-flex-column {
+    flex: 1;
+    margin: 0 10px 0 10px;
+}
+
+.footer-flex-column:last-child {
+    margin: 0 0 0 10px;
+
+}
+
+.footer-flex-row:first-child {
+    margin-bottom: 30px;
+}
+
+.footer-title {
+    margin: 10px 0 30px 0;
+}
+
+button {
+    width: 100%;
+}
+
+hr {
     width: 1170px;
 }
 
 
 .day-images {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    grid-gap: 5px;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    row-gap: 10px;
 } 
 
 .day-images img {
-    width: 90px;
-    height: 90px;
+    max-width: 30%;
 
 }
 
 input {
     display: block;
-}
-
-
-.footer-flex-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    margin: 10px 0;
+    width: 100%;
 }
