--- a/PR/css/footer.css
+++ b/PR/css/footer.css
@@ -6,8 +6,16 @@ footer {
     padding: 15px 0 50px 0;
 }
 
+.footer-brands  i {
+    border: 1px solid black;
+    background-color: gray;
+    color: black;
+    padding: 5px;
+}
+
 
 .footer-flex-row {
+    color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
