--- a/PR/css/footer.css
+++ b/PR/css/footer.css
@@ -6,7 +6,7 @@ footer {
     padding: 15px 0 50px 0;
 }
 
-.footer-brands  i {
+.footer-brands i {
     border: 1px solid black;
     background-color: gray;
     color: black;
@@ -64,8 +64,12 @@ hr {
 
 }
 
-input {
+.sign-up input {
+    
+    padding: 10px;
+    border: 1px solid black;
+    box-sizing: border-box;
     display: block;
-    margin: 10px 0;
+    margin: 10px 0 0 0;
     width: 100%;
 }
