--- a/PR/css/index.css
+++ b/PR/css/index.css
@@ -2,7 +2,8 @@
 @import "blog.css";
 @import "about-me.css";
 @import "my-team.css";
+@import "unlocking.css";
 
-#unlocking {
-    background-color: black;
-}
+
+
+
