--- a/PR/css/footer.css
+++ b/PR/css/footer.css
@@ -3,14 +3,13 @@ footer {
     "footer-info footer-info footer-info footer-info";
     background-color: var(--background-footer);
     color: var(--text-footer);
-    margin-top: 50px;
     padding: 15px 0 50px 0;
 }
 
 .footer-brands i {
     border: 1px solid black;
-    background-color: gray;
-    color: black;
+    background-color: var(--background-grey);
+    color: var(--text-footer);
     padding: 5px;
     min-width: 5%;
     text-align: center;
@@ -90,6 +89,17 @@ hr {
     margin: 10px 0 0 0;
     background-color: var(--input-footer);
     width: 100%;
+}
+
+.sign-up input:focus {
+    box-shadow: 1px 1px white;
+}
+
+
+.sign-up button:hover {
+    background-color: var(--background-footer);
+    color: var(--text-footer);
+    border: 1px solid var(--text-footer);
 }
 
 
