--- a/PR/css/common.css
+++ b/PR/css/common.css
@@ -24,7 +24,7 @@
     --background-cabecera: rgb(103, 103, 103, 0.5);
 
     /* Color hover imágenes: rgb(132, 131, 131) Aplicar la transparencia necesaria */
-    --images-hover: rgb(132, 131, 131,.2);
+    --images-hover: rgb(132, 131, 131,.4);
 
     /* Fondo gris claro (fondos, fondo tabla, color del menú redes sociales, etc): #e4e4e4 */
     --background-grey: #e4e4e4;
@@ -111,7 +111,7 @@
     background-color: white;
     border-color: var(--basic-red);
     padding: 10px 0;
-    margin: 10px;
+    margin: 10px 0;
     border-style: solid;
     min-width: 100%;
 }
@@ -143,8 +143,13 @@ h1, h2 {
 
 h2 {
     color: var(--basic-red);
+    font-size: 50px !important;
 }
 
+
+h1 {
+    font-size: 90px !important;
+}
 
 
 .clearfix::after {
@@ -160,6 +165,7 @@ h2 {
 html {
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 
@@ -190,17 +196,21 @@ html {
 
 .exploding-image {
     transition: all 0.3s;
+    display: inline-block;
 
 }
 
-.exploding-image:hover {
-    background-color: white;
-    height: fit-content;
+.exploding-image img {
+    margin: 0 !important;
+}
+
+.exploding-image:hover{
     transform: scale(1.2);
 }
 
 .exploding-image:hover::before {
     content: "+";
+    background-color: var(--images-hover);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,6 +223,8 @@ html {
     position: absolute;
 
 }
+
+
 
 
 
