--- a/PR/css/common.css
+++ b/PR/css/common.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans');
 @import url('https://fonts.googleapis.com/css?family=Yellowtail&family=Open+Sans&display=swap');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 @import "headers.css";
 @import "menu-explode.css";
 @import "footer.css";
@@ -106,6 +107,10 @@
     color: var(--basic-red);
 }
 
+button {
+    cursor: pointer;
+}
+
 .more-button {
     color: var(--basic-red);
     background-color: white;
@@ -115,6 +120,13 @@
     border-style: solid;
     min-width: 100%;
 }
+
+.more-button:hover {
+    color: white;
+    background-color: var(--basic-red);
+
+}
+
 
 .float-button {
     color: var(--basic-red);
@@ -137,13 +149,17 @@ html{
 }
 
 
-h1, h2 {
+h1, h2, h3 {
     font-family: "Yellowtail", sans-serif !important;
 }
 
 h2 {
     color: var(--basic-red);
-    font-size: 50px !important;
+    font-size: 25px !important;
+}
+
+.gigantic {
+    font-size: 40px;
 }
 
 
@@ -223,9 +239,6 @@ html {
     position: absolute;
 
 }
-
-
-
 
 
 
