--- a/PR/css/menu-explode.css
+++ b/PR/css/menu-explode.css
@@ -68,6 +68,7 @@ header ul li:hover a {
 
 @media (max-width: 768px){
 
+
     .header-top {
         width: 100%;
         z-index: 3;
@@ -78,6 +79,7 @@ header ul li:hover a {
         padding: 0;
         list-style: none;
         overflow: hidden;
+        color: black !important;
     }
 
     header ul a {
