--- a/PR/css/mobile-index.css
+++ b/PR/css/mobile-index.css
@@ -1,25 +1,5 @@
 @media (max-width: 768px){
 
-    h1 {
-        font-size: 50px;
-    }
-
-    .container {
-        width: 90vw;
-    }
-
-    html {
-        width: 100vw;
-    }
-
-    h2 {
-        font-size: 24px;
-    }
-
-    h3 {
-        font-size: 20px;
-    }
-
     .design-light-color {
         font-size: 20px;
     }
@@ -35,20 +15,21 @@
     .experiences-flex-column {
         width: 100%;
     }
-    
-    
 
+    .experiences-flex-column figure {
+        width: 100%;
+    }
+
+    .experiences-flex-column figure img {
+        min-width: 100%;
+    }
+    
     .float-button {
         box-sizing: border-box;
         float: none;
         margin: 0;
         min-width: 100%;
     }
-
-
-    
-
-
 
     .clear-fix h2 {
         display: block;
@@ -62,11 +43,23 @@
     
     img[src="images/profile.jpg"]{ 
         display: block;
+        float: none;
         border-radius: 100%;
         width: 90%;
         margin: 0 auto;
     }
 
+    .team-flex-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .team-flex-column {
+        width: 70%;
+        justify-content: center;
+        align-content: center;
+
+    }
 
     .team-flex-column img {
         min-width: 100%;
@@ -77,6 +70,5 @@
         background-color: white;
         border: none;
     }
-
 
 }
