--- a/PR/css/mobile/mobile-footer.css
+++ b/PR/css/mobile/mobile-footer.css
@@ -1,5 +1,10 @@
 @media (max-width: 768px) {
     
+    footer {
+        width: 90%;
+        grid: "footer";
+    }
+
     .footer-flex-row {
         flex-direction: column;
     }
