--- a/PR/css/mobile/mobile-common.css
+++ b/PR/css/mobile/mobile-common.css
@@ -15,15 +15,22 @@
         width: 80%;
         height: 80%;
     }
-    
+
 
     .anika-container-camera div {
         font-size: medium;
         margin-top: 10%;
     }
+    
+    .anika-container {
+        width: 80%;
+        height: 80%;
+    }
+    
     body {
         width: 90%;
         padding: 0;
+        margin: 0;
         display: grid;
         grid-template-areas: "header"
         "main"
