--- a/PR/css/mobile/mobile-web-design.css
+++ b/PR/css/mobile/mobile-web-design.css
@@ -1,9 +1,9 @@
 @media (max-width: 768px) {
 
+
     .clearfix figure {
         width: 100%;
     }
-
     
     .clearfix figure img {
         width: 100%;
@@ -15,6 +15,28 @@
 
     .web-design-content {
         border: none;
+        width: 100%;
+        padding: 0;
+    }
+
+
+    .single-comment {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .web-design-content section figure{
+        margin-left: 0;
+        margin-right: 0;
+
+    }
+
+    .more-on-blog {
+        width: 100%;
+    }
+
+    .more-on-blog ul {
+        margin-left: 50px;
     }
 
 }
