--- a/PR/css/mobile/mobile-common.css
+++ b/PR/css/mobile/mobile-common.css
@@ -30,7 +30,7 @@
     body {
         width: 90%;
         padding: 0;
-        margin: 0;
+        margin: 0 auto;
         display: grid;
         grid-template-areas: "header"
         "main"
