--- a/PR/css/mobile/mobile-index.css
+++ b/PR/css/mobile/mobile-index.css
@@ -45,7 +45,7 @@
         display: block;
         float: none;
         border-radius: 100%;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -68,6 +68,7 @@
     .float-blog div {
         display: flex;
         flex-direction: column;
+        overflow: scroll;
     }
 
 }
