--- a/PR/css/mobile/mobile-common.css
+++ b/PR/css/mobile/mobile-common.css
@@ -28,7 +28,7 @@
     }
     
     body {
-        width: 90%;
+        width: 100%;
         padding: 0;
         margin: 0 auto;
         display: grid;
@@ -39,7 +39,7 @@
 
     main {
         grid: "main";
-        width: 90%;
+        width: 100%;
         padding: 0;
     }
 
@@ -47,7 +47,7 @@
         width: 100%;
         box-sizing: border-box;
         margin: 0;
-        padding: 0;
+        padding: 1em;
     }
 
     section {
