--- a/PR/css/utilities/footer-button.css
+++ b/PR/css/utilities/footer-button.css
@@ -107,7 +107,7 @@ footer button::before {
 
 @keyframes bubbles {
   from {
-    transform: translate();
+    transform: translate(0,0);
   }
   to {
     transform: translate(0, -66.666%);
