--- a/PR/css/utilities/footer-button.css
+++ b/PR/css/utilities/footer-button.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200,900');
 
 :root {
-  --text-color: hsla(210, 50%, 85%, 1);
+  --text-color: rgb(35, 104, 172);
   --shadow-color: hsla(210, 40%, 52%, .4);
   --btn-color: hsl(210, 80%, 42%);
   --bg-color: #141218;
