--- a/PR/css/common.css
+++ b/PR/css/common.css
@@ -117,6 +117,7 @@ main {
 .red-dashed {
     text-decoration: underline;
     color: var(--basic-red);
+    font-size: larger;
 }
 
 button {
@@ -260,6 +261,19 @@ html {
 
 
 
+.skip {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
 
+  .skip:focus {
+    position: static;
+    width: auto;
+    height: auto;
+  }
 
 
