--- a/PR/css/headers.css
+++ b/PR/css/headers.css
@@ -139,7 +139,7 @@ nav {
   font-style: italic;
 }
 
-.anika-container-camera div {
+.anika-container-camera span {
   margin: 10px 0;
   font-size: x-small;
   margin-bottom: 5px;
